# Maim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  changelog.txt
.github/workflows/: cmake_test.yml
Docs/: BUILDING.md  Manual.md  codec notes.md  latencynotes.md
Maim/: Maim.jucer  README.md
Maim/Builds/LinuxMakefile/: Makefile
Maim/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist
Maim/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Maim/Source/: AutoGain.h  BladeController.cpp  BladeController.h  LameController.cpp  LameController.h  LameControllerManager.cpp  LameControllerManager.h  MP3Controller.cpp  MP3Controller.h  MP3ControllerManager.cpp  MP3ControllerManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  QueueBuffer.h
Maim/Source/GUIelements/: ArrayAssigner.cpp  ArrayAssigner.h  DecodeSection.cpp  DecodeSection.h  DragBox.cpp  DragBox.h  IndicatorLight.cpp  LineGraph.h  MDCTSection.cpp  MDCTSection.h  MainArea.cpp  MainArea.h  PostSection.cpp  PostSection.h  PsychoacousticSection.cpp  PsychoacousticSection.h  PsychoanalGraph.h  QuantizeSection.cpp  QuantizeSection.h  StageWindow.cpp  StageWindow.h  guiUtil.h
Maim/lib/blade/: ChangeLog  INSTALL  Makefile.am  Makefile.in  TODO  bladeenc.html  bladeenc.lsm  bladeenc.spec  command.sh  config.h.in  configure  configure.in
Maim/lib/blade/bladeenc/: Makefile  Makefile.am  Makefile.in  arglink.c  arglink.h  blade.c  blade.h  bladeenc  bladesys.c  bladesys.h  codec.c  codec.h  common.h  encoder.h  formatbitstream2.c  formatbitstream2.h  l3bitstream.c  l3bitstream.h  l3psy.c  l3psy.h  l3side.h  loop-pvt.h  loop.c  loop.h  main.c  mdct.c  mdct.h  out.mp3.asd  plot.py  reservoir.c  reservoir.h  run.sh  samplein.c  samplein.h  strupr.c  subs.c  tables.c  tables.h  test.txt
Maim/lib/blade/bladeenc/bladeenc.dSYM/Contents/: Info.plist
Maim/lib/blade/bladeenc/bladeenc.dSYM/Contents/Resources/DWARF/: bladeenc
Maim/lib/blade/other_makefiles/: BladeEnc.%B6  Makefile.os2  Makefile.vbcc  README.txt  bladeenc.dsp  makefile.bor  makefile.dj
Maim/lib/lame/: Makefile  config.status  libtool
Source/: BladeController.cpp  BladeController.h  CodecController.h  LameController.cpp  LameController.h  MP3Controller.cpp  MP3Controller.h  MP3ControllerManager.cpp  MP3ControllerManager.h  MaimLookAndFeel.cpp  MaimLookAndFeel.h  OpusController.cpp  OpusController.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  QueueBuffer.h
Source/CodecControllers/: BladeController.cpp  BladeController.h  CodecController.cpp  CodecController.h  LameController.h  MP3Controller.cpp  MP3Controller.h  OpusController.cpp  OpusController.h
Source/GUIelements/: ArrayAssigner.cpp  ArrayAssigner.h  BlockyLineGraph.cpp  BlockyLineGraph.h  ButterflyDragBox.cpp  DecodeSection.cpp  DecodeSection.h  DemureSlider.cpp  DemureSlider.h  DragBox.cpp  DragBox.h  EncoderBitrateSection.cpp  EncoderBitrateSection.h  IndicatorLight.h  LineGraph.h  MDCTGraph.cpp  MDCTGraph.h  MDCTGraphSection.cpp  MDCTGraphSection.h  MDCTSection.cpp  MDCTSection.h  MaimColours.h  MaimLookAndFeel.cpp  MaimLookAndFeel.h  MainArea.cpp  MainArea.h  MiscellaneaSection.cpp  MiscellaneaSection.h  NamedRotarySlider.cpp  NamedRotarySlider.h  PostSection.cpp  PostSection.h  PsychoacousticSection.cpp  PsychoacousticSection.h  PsychoanalGraph.cpp  PsychoanalGraph.h  QuantizeSection.cpp  QuantizeSection.h  ReassignmentSection.cpp  ReassignmentSection.h  (+8 more)
Source/GUIelements/ArrayAssignerButtons/: ArrayAssignerButton.cpp  ArrayAssignerButton.h
Source/lib/lame/: config.h  config.status  libtool
Tests/: PluginTests.cpp
band_tables/: table_calc.py
lame_original/ACM/ADbg/: Makefile
lame_original/doc/html/: Makefile
lame_original/frontend/: Makefile
lame_original/frontend/.deps/: get_audio.Po  timestatus.Po
lame_original/include/: Makefile
lame_original/libmp3lame/.deps/: bitstream.Plo  lame.Plo  mpglib_interface.Plo  tables.Plo  takehiro.Plo  version.Plo
lame_original/macosx/: Makefile
lame_original/macosx/LAME.xcodeproj/: Makefile
lame_original/mpglib/: Makefile
lame_original/mpglib/.deps/: common.Plo  layer1.Plo
lib/blade/: main.c
lib/blade/bladeenc/: blade.c  blade.h  codec.c  common.h  formatbitstream2.c  l3bitstream-pvt.h  loop.c  mdct.h  reservoir.h
lib/lame/: Makefile  Makefile.MSVC  config.h  config.status  configure  libtool
lib/lame/ACM/: Makefile
lib/lame/Dll/: Makefile
lib/lame/debian/: Makefile
lib/lame/doc/: Makefile
lib/lame/dshow/: Makefile
lib/lame/frontend/: Makefile  gtkanal.c
lib/lame/include/: Makefile  lame.h
lib/lame/libmp3lame/: Makefile  encoder.c  encoder.h  lame.c  lame_global_flags.h  mpglib_interface.c  newmdct.c  psymodel.c  quantize.c  quantize_pvt.c  util.h
lib/lame/mac/: Makefile
lib/lame/macosx/: Makefile
lib/lame/misc/: Makefile
packaging/: Maim.pkgproj  dmg.json  installer.iss
source/: AutoGain.cpp  CodecControllerManager.cpp  CodecControllerManager.h  MP3ControllerManager.cpp  Mp3ControllerManager.cpp  Mp3ControllerManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  QueueBuffer.h  RootMeanSquare.cpp  RootMeanSquare.h  parameterIds.h
source/CodecControllers/: BladeController.cpp  BladeController.h  CodecController.cpp  CodecController.h  LameController.cpp  LameController.h  MP3Controller.cpp  MP3Controller.h  OpusController.cpp  OpusController.h  PacketLossModel.h
source/GUIelements/: DemureSlider.h  EncoderBitrateSection.cpp  EncoderBitrateSection.h  IndicatorLight.cpp  MDCTGraph.cpp  MDCTGraphSection.cpp  MDCTGraphSection.h  MaimLookAndFeel.cpp  MainArea.cpp  MainArea.h  MiscellaneaSection.cpp  MiscellaneaSection.h  Mp3OnlyLabel.h  NamedRotarySlider.cpp  NamedRotarySlider.h  OpusPacketLossSection.cpp  OpusPacketLossSection.h  PostSection.cpp  PostSection.h  PsychoanalGraph.h  ReassignmentSection.cpp  ReassignmentSection.h  SquishFlipDragBox.h  StageWindow.h  TiltGraph.cpp  TitlePanel.cpp  TitlePanel.h
tests/: PluginBasics.cpp
tests/helpers/: test_helpers.h
(+127 files in other folders)
