dnl Process this file with autoconf to produce a configure script.
AC_INIT(Makefile.am)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(bladeenc,0.94.2)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Check if we're big endian or not
AC_C_BIGENDIAN

dnl Checks for library functions.

AC_OUTPUT(Makefile bladeenc/Makefile)
