bin_PROGRAMS = bladeenc

bladeenc_SOURCES = tables.c strupr.c samplein.c reservoir.c mdct.c main.c loop.c l3psy.c l3bitstream.c formatbitstream2.c encode.c common.c codec.c bladesys.c arglink.c subs.c arglink.h bladesys.h codec.h common.h encoder.h formatbitstream2.h huffman.h l3bitstream-pvt.h l3bitstream.h l3psy.h l3side.h loop-pvt.h loop.h mdct.h reservoir.h samplein.h system.h tables.h

bladeenc_LDADD   =  -lm

